@@ -11,13 +11,6 @@
   (inst pop (make-ea :qword :base rbp-tn :disp n-word-bytes))
   (emit-error-break nil cerror-trap (error-number-or-lose 'undefined-fun-error) (list rax))
   (inst push (make-ea :qword :base rbp-tn :disp n-word-bytes))
-  (inst test rax (logxor other-pointer-lowtag fun-pointer-lowtag))
-  (inst jmp :nz FDEFN)
-  (inst jmp
-        (make-ea :qword :base rax
-                        :disp (- (* closure-fun-slot n-word-bytes)
-                                 fun-pointer-lowtag)))
-  FDEFN
   (inst jmp
         (make-ea :qword :base rax
                         :disp (- (* fdefn-raw-addr-slot
