@@ -123,6 +123,13 @@
     (declare (type (alien (* unsigned)) addr))
     (int-sap (deref addr))))
 
+(declaim (inline set-context-pc))
+(defun incf-context-pc (context offset)
+  (declare (type (alien (* os-context-t)) context))
+  (let ((addr (context-pc-addr context)))
+    (declare (type (alien (* unsigned)) addr))
+    (setf (deref addr) (+ (deref addr) offset))))
+
 (declaim (inline context-register-addr))
 (define-alien-routine ("os_context_register_addr" context-register-addr)
   (* unsigned)
