@@ -16,6 +16,8 @@ changes relative to sbcl-1.3.14:
     except by SAVE-LISP-AND-DIE. Immobility has helpful implications for
     code generation as well as interaction with foreign routines.
     This feature can only be enabled if #+immobile-space is enabled.
+  * enhancement: undefined function errors can be restarted on x86-64, to
+    either retry calling the function again or call a user supplied function.
   * defaults change: sb-ext:*disassemble-annotate* default to NIL, due to its
     poor reliability.
   * new feature: SB-LINKABLE-RUNTIME, allowing linking with extra object
